fix: dependencies and selectors-names

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<my-menu></my-menu>
-<my-login></my-login>
-<!-- <my-registration></my-registration> -->
-<!-- <my-footer></my-footer> -->
+<app-menu></app-menu>
+<app-login></app-login>
+<app-registration></app-registration>
+<app-footer></app-footer>
