--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,25 @@
-<p>
-profile works!
-</p>
+<form #f="ngForm" (ngSubmit)="onSubmit(f)" class="form" ngNativeValidate>
+  <input type="text" name="firstName" ngModel placeholder="name" required #firstName="ngModel"
+         pattern="[A-Za-zА-Яа-яЁё]{3,15}" title="Name must contain only letters"/>
+
+  <input type="text" name="lastName" ngModel placeholder="last name" #lastName="ngModel" required
+         pattern="[A-Za-zА-Яа-яЁё]{3,15}" title="last name must contain only letters"/>
+
+  <input type="email" name="login" ngModel placeholder="e-mail" #login="ngModel" required minlength="5"/>
+
+  <input type="date" name="birthDay" ngModel placeholder="birthDay" #password="ngModel"/>
+
+  <div class="row align-items-center">
+    <div class="col">
+      <input type="radio" id="radioMale" name="sex" value="male" ngModel #sex="ngModel"/>
+      <label>male</label>
+    </div>
+
+    <div class="col">
+      <input type="radio" id="radioFemale" name="sex" value="female" ngModel #sex="ngModel"/>
+      <label>female</label>
+    </div>
+
+  </div>
+  <button>Edit profile</button>
+</form>
