--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,3 +1,22 @@
-<p>
-add-item works!
-</p>
+<form class="content">
+  <div class="row">
+    <div class="col">
+      <button class="btn btn-circle btn-xl btn-outline-warning" type="submit" (click)="stationSubmit()">
+        <img src="/src/assets/images/railroad.png">
+      </button>
+    </div>
+    <div class="col">
+      <button class="btn btn-circle btn-xl btn-outline-warning" type="submit" (click)="scheduleSubmit()">
+        <img src="/src/assets/images/calendar.png">
+      </button>
+    </div>
+    <div class="col">
+      <button class="btn btn-circle btn-xl btn-outline-warning" type="submit" (click)="trainSubmit()">
+        <img src="/src/assets/images/subway.png">
+      </button>
+    </div>
+  </div>
+  <app-add-schedule *ngIf="visibleSchedule"></app-add-schedule>
+  <app-add-train *ngIf="visibleTrain"></app-add-train>
+  <app-add-station *ngIf="visibleStation"></app-add-station>
+</form>
