--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-menu></app-menu>
-<app-login></app-login>
-<app-registration></app-registration>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
