style: fix btn style

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,17 +1,17 @@
 <form class="content">
   <div class="row">
     <div class="col">
-      <button class="btn btn-circle btn-xl btn-outline-warning" type="submit" (click)="stationSubmit()">
+      <button class="btn btn-circle btn-xl bg-warning btn-warning form-control" type="submit" (click)="stationSubmit()">
         <img src="/src/assets/images/railroad.png">
       </button>
     </div>
     <div class="col">
-      <button class="btn btn-circle btn-xl btn-outline-warning" type="submit" (click)="scheduleSubmit()">
+      <button class="btn btn-circle btn-xl bg-warning btn-warning form-control" type="submit" (click)="scheduleSubmit()">
         <img src="/src/assets/images/calendar.png">
       </button>
     </div>
     <div class="col">
-      <button class="btn btn-circle btn-xl btn-outline-warning" type="submit" (click)="trainSubmit()">
+      <button class="btn btn-circle btn-xl bg-warning btn-warning form-control" type="submit" (click)="trainSubmit()">
         <img src="/src/assets/images/subway.png">
       </button>
     </div>
