--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="content">
 	<!-- <div class="background"></div> -->
 	<form #f="ngForm" (ngSubmit)="onSubmit(f)" class="form" ngNativeValidate>
-		<input type="email" name="login" ngModel placeholder="e-mail" required #login="ngModel">
+		<input type="email" name="username" ngModel placeholder="e-mail" required #username="ngModel">
 		<input type="password" name="password" ngModel placeholder="password" #password="ngModel" required>
 		<button>Login</button>
 	</form>
