--- a/src/app/audit/audit.component.html
+++ b/src/app/audit/audit.component.html
@@ -1,4 +1,5 @@
-<div class="container" id="app-deleted">
+<app-menu></app-menu>
+<div class="container">
   <br>
   <div class="row text-center">
     <div class="col-4">
