--- a/src/app/audit/table-audit/table-audit.component.html
+++ b/src/app/audit/table-audit/table-audit.component.html
@@ -1,6 +1,6 @@
-<table class="table table-striped table-dark">
+<table class="table table-striped table-dark" [(mfData)]="audits" #mf="mfDataTable" [mfRowsOnPage]="10">
   <thead class="font-weight-bold">
-  <tr *ngIf="audits!=[]">
+  <tr>
     <th class="text-center">Changed date</th>
     <th class="text-center">Changed by</th>
     <th class="text-center">Event</th>
@@ -9,7 +9,7 @@
   </tr>
   </thead>
   <tbody class="text-center text-warning">
-  <tr *ngFor="let audit of audits; let i=index">
+  <tr *ngFor="let audit of mf.data; let i=index">
     <td>{{audit.date}}</td>
     <td>{{audit.userLogin}}</td>
     <td>{{audit.operations}}</td>
@@ -20,4 +20,11 @@
     </td>
   </tr>
   </tbody>
+  <tfoot>
+  <tr>
+    <td colspan="4">
+      <mfBootstrapPaginator class="pagination pagination-sm justify-content-end" style="color: #6610f2;" [rowsOnPageSet]="[10, 50,100, 1000]"></mfBootstrapPaginator>
+    </td>
+  </tr>
+  </tfoot>
 </table>
