--- a/src/app/audit/table-stations/table-stations.component.html
+++ b/src/app/audit/table-stations/table-stations.component.html
@@ -1,5 +1,5 @@
 <table class="table table-striped table-dark text-center">
-  <thead class="font-weight-bold">
+  <thead class="font-weight-bold" *ngIf="stations!=[]">
   <tr>
     <th class="text-center">Station name</th>
     <th class="text-center">Latitude</th>
