--- a/src/app/audit/table-train/table-train.component.html
+++ b/src/app/audit/table-train/table-train.component.html
@@ -1,5 +1,5 @@
 <table class="table table-striped table-dark">
-  <thead class="font-weight-bold">
+  <thead class="font-weight-bold" *ngIf="trains!=[]">
   <tr>
     <th class="text-center">Train</th>
     <th class="text-center">Count carriages</th>
