--- a/src/app/edit-item/table-edit-item-schedule/table-edit-item-schedule.component.html
+++ b/src/app/edit-item/table-edit-item-schedule/table-edit-item-schedule.component.html
@@ -20,9 +20,9 @@
       <button class='btn btn-outline-warning editSchedule' (click)="edit(schedule, i)"><img
         src='/src/assets/images/edit.png'>
       </button>
-      <button class='btn btn-outline-warning deleteSchedule' (click)="delete(i)"><img
+      <button class='btn btn-outline-warning deleteSchedule' (click)="delete(schedule.id, i)"><img
         src='/src/assets/images/rubbish-bin.png'></button>
-      <button class='btn btn-outline-warning openScheduleTicket' (click)="info(i)">
+      <button class='btn btn-outline-warning openScheduleTicket' (click)="info(schedule.id)">
         <img src='/src/assets/images/magnifier.png'></button>
     </td>
   </tr>
