--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -7,4 +7,5 @@
 	<input type="password" name="password" ngModel placeholder="password" #password="ngModel" required minlength="6" title="Password length mist be longer than 5 letters"
 	/>
 	<button>Registration</button>
+  <p class="message">Already registered? <a [routerLink]="['/login']">Sign In</a></p>
 </form>
