--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,51 +1,87 @@
-<div id="myCarousel" class="carousel" data-interval="false">
-  <!-- Indicators -->
-  <ol class=" carousel-indicators">
-    <li data-slide-to="0" class="active border-light bg-warning"></li>
-    <li data-slide-to="1" class="border-light bg-warning"></li>
-    <li data-slide-to="2" class="border-light bg-warning"></li>
-    <li data-slide-to="3" class="border-light bg-warning"></li>
-  </ol>
+<app-menu></app-menu>
+<br>
+<ngb-carousel data-interval="false" [showNavigationIndicators]="false">
+  <ng-template ngbSlide>
+    <app-schedule-by-dates-stations-train
+      (messageEvent)="receiveMessage($event)">
+    </app-schedule-by-dates-stations-train>
+  </ng-template>
+  <ng-template ngbSlide>
+    <app-schedule-by-dates-stations
+      (messageEvent)="receiveMessage($event)">
+    </app-schedule-by-dates-stations>
+  </ng-template>
+  <ng-template ngbSlide>
+    <app-schedule-by-dates
+      (messageEvent)="receiveMessage($event)">
+    </app-schedule-by-dates>
+  </ng-template>
+  <ng-template ngbSlide>
+    <app-schedule-by-dates-train
+      (messageEvent)="receiveMessage($event)">
+    </app-schedule-by-dates-train>
+  </ng-template>
+</ngb-carousel>
+<table class="table table-hover">
+  <tbody class="text-warning text-center">
+  <tr *ngFor="let schedule of schedules; let i=index">
+    <th scope='row'>
+      <div>
+        <div>
+          <img src='/src/assets/images/trainIcoWarn.png'></div>
+        <label class='font-weight-normal'>
+          {{schedule.trainName}} </label>
+      </div>
+    </th>
+    <td>
+      <br>
+      <div>
+        <label class='font-weight-normal'>
+          {{ schedule.dateDeparture}}
+        </label>
+      </div>
+      <div>
+        <label class='font-weight-bold'>
+          {{ schedule.stationDepartureName}}
+        </label>
+      </div>
+    </td>
+    <td>
+      <div style='margin-left: 50%'>
+        <label class='font-weight-light'>
+          {{getDelayBetweenTwoDates(schedule.dateDeparture, schedule.dateArrival)}}
+        </label>
+      </div>
+      <div style='margin-left: 50%'>
+        <img src='/src/assets/images/arrow-13-xxl.png' width='50'>
+      </div>
+    </td>
+    <td>
+      <br>
+      <div style='margin-left: 50%'>
+        <label class='font-weight-normal'>
+          {{schedule.dateArrival}}
+        </label>
+      </div>
+      <div style='margin-left: 50%'>
+        <label class='font-weight-bold'>
+          {{schedule.stationArrivalName}}
+        </label>
+      </div>
+    </td>
+    <td>
+      <br>
+      <div style='margin-left: 50%'>
+        <label>
+          {{ schedule.price}}
+        </label>
+      </div>
+      <button type='button' style='margin-left: 50%' class='btn btn-lg btn-outline-warning'
+              (click)="findTicket(schedule, i)">
+        FIND Ticket
+      </button>
+    </td>
+  </tr>
+  </tbody>
+</table>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <datalist id="stationsList"></datalist>
-    <datalist id="trainsList"></datalist>
-
-    <div class="item">
-      <app-schedule-by-dates-stations></app-schedule-by-dates-stations>
-    </div>
-
-    <div class="item">
-      <app-schedule-by-dates></app-schedule-by-dates>
-    </div>
-
-    <div class="active item">
-      <app-schedule-by-dates-stations-train></app-schedule-by-dates-stations-train>
-    </div>
-
-    <div class="item">
-      <app-schedule-by-dates-train></app-schedule-by-dates-train>
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<div id="containerForSearching" style="display: none">
-  <table class="table table-hover table-dark">
-    <tbody class="text-warning text-center" id="containerForSearchingDirect">
-    </tbody>
-  </table>
-  <table class="table table-hover table-dark">
-    <tbody class="text-warning text-center" id="containerForSearchingTransfer">
-    </tbody>
-  </table>
-</div>
