--- a/src/app/schedule/schedule-by-dates-stations/schedule-by-dates-stations.component.html
+++ b/src/app/schedule/schedule-by-dates-stations/schedule-by-dates-stations.component.html
@@ -46,7 +46,7 @@
             <div class="col-1"></div>
           </div>
           <div class="text-center align-items-center">
-            <input type="checkbox" class="text-warning">
+            <input type="checkbox" class="text-warning" name="transfer" [(ngModel)]="transfer">
             <label class="text-warning">with transfer</label>
           </div>
           <br>
