style: fix style of tables from bootstrap dark to rgba

--- a/src/app/audit/table-audit/table-audit.component.html
+++ b/src/app/audit/table-audit/table-audit.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-dark" [(mfData)]="audits" #mf="mfDataTable" [mfRowsOnPage]="10">
+<table class="table table-striped tableRailway" [(mfData)]="audits" #mf="mfDataTable" [mfRowsOnPage]="10">
   <thead class="font-weight-bold">
   <tr>
     <th class="text-center">Changed date</th>
