--- a/src/app/audit/table-stations/table-stations.component.html
+++ b/src/app/audit/table-stations/table-stations.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-dark text-center">
+<table class="table table-striped tableRailway text-center">
   <thead class="font-weight-bold" *ngIf="stations!=[]">
   <tr>
     <th class="text-center">Station name</th>
