--- a/src/app/audit/table-train/table-train.component.html
+++ b/src/app/audit/table-train/table-train.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-dark">
+<table class="table table-striped tableRailway">
   <thead class="font-weight-bold" *ngIf="trains!=[]">
   <tr>
     <th class="text-center">Train</th>
