--- a/src/app/edit-item/table-edit-item-train/table-edit-item-train.component.html
+++ b/src/app/edit-item/table-edit-item-train/table-edit-item-train.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-dark">
+<table class="table table-striped tableRailway">
 		<thead class="font-weight-bold">
 			<tr>
 				<th class="text-center">Train</th>
