--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,3 +1,3 @@
 <app-menu></app-menu>
-<app-content-seats></app-content-seats>
+<app-content-seats [ID]="ID" [NEXT]="ID_NEXT" [FLAG]="transfer"></app-content-seats>
 <app-footer-seats></app-footer-seats>
