--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,14 @@
 <app-menu></app-menu>
+<div class="content position-fixed">
+  <div class="wrapper">
+    <div class="background"></div>
+    <div class="rocks_1"></div>
+    <div class="rocks_2"></div>
+    <div class="rails"></div>
+    <div class="train"></div>
+    <div class="ground"></div>
+    <div class="lights"></div>
+    <div class="moon"></div>
+  </div>
+</div>
+
