style: railway-template

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,13 @@
 <div class="d-flex  align-items-center p-3 bg-dark  box-shadow">
 	<h5 class="my-0 mr-md-auto font-weight-normal text-warning">RAILWAY EMPIRE</h5>
 	<nav class="my-2 my-md-0 mr-md-3">
-		<a class="p-2 text-light" [routerLink]="['/schedule']" id="showScheduleID">Schedule</a>
-		<a class="p-2 text-light" [routerLink]="['/add-item']" id="showNewItemID">New</a>
-		<a class="p-2 text-light" [routerLink]="['/edit-item']">Edit</a>
-		<a class="p-2 text-light" [routerLink]="['/chart']" id="showChartID">Chart</a>
-		<a class="p-2 text-light" [routerLink]="['/audit']">Audit</a>
-		<a class="p-2 text-light" [routerLink]="['/trips']" id="showTripsID">Trips</a>
-		<a class="p-2 text-light" [routerLink]="['/profile']">Profile</a>
+		<a class="p-2 text-light" [routerLink]="['/schedule']" id="showScheduleID" [hidden]="!(ROLE_USER || ROLE_MANAGER || ROLE_ADMIN)">Schedule</a>
+		<a class="p-2 text-light" [routerLink]="['/add-item']" id="showNewItemID" [hidden]="!(ROLE_ADMIN || ROLE_MANAGER)">New</a>
+		<a class="p-2 text-light" [routerLink]="['/edit-item']" [hidden]="!(ROLE_ADMIN || ROLE_MANAGER)">Edit</a>
+		<a class="p-2 text-light" [routerLink]="['/chart']" id="showChartID" [hidden]="!ROLE_ADMIN">Chart</a>
+		<a class="p-2 text-light" [routerLink]="['/audit']" [hidden]="!ROLE_ADMIN">Audit</a>
+		<a class="p-2 text-light" [routerLink]="['/trips']" id="showTripsID" [hidden]="!ROLE_USER">Trips</a>
+		<a class="p-2 text-light" [routerLink]="['/profile']" [hidden]="!ROLE_USER">Profile</a>
 	</nav>
 	<a class="btn btn-outline-warning" href="/logout">Sign out</a>
 </div>
