--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,12 +1,11 @@
 .form {
    width: 360px;
     padding: 5% 0 0;
-    margin: auto 30%;
     position: relative;
     z-index: 1;
     background: #FFFFFF;
     max-width: 360px;
-    margin: 0 auto 50px;
+    margin: 5% auto;
     padding: 45px;
     text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
