fix: error page, add btn to get back (login/home page)

--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,3 +1,4 @@
 <h1 class="text-center text-warning">Opps ...</h1>
 <h4 class="text-center text-light">Something went wrong, maybe you try to get access to security resource</h4>
 <img class="centerImg" src="/src/assets/images/error.png">
+<button class="btn btn-outline-warning text-warning bg-dark" (click)="check()">GET BACK</button>
