--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -6,6 +6,6 @@
 	<input type="email" name="login" ngModel placeholder="e-mail" #login="ngModel" required minlength="5" />
 	<input type="password" name="password" ngModel placeholder="password" #password="ngModel" required minlength="6" title="Password length mist be longer than 5 letters"
 	/>
-	<button>Registration</button>
+	<button name="registration">Registration</button>
   <p class="message">Already registered? <a [routerLink]="['/login']">Sign In</a></p>
 </form>
