--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col" style="margin-left: 90px">
       <button class="btn btn-circle btn-xl bg-warning btn-warning form-control" type="submit"
-              (click)="stationSubmit()">
+              (click)="stationSubmit()" id="stationSubmit">
         <img src="/src/assets/images/railroad.png">
       </button>
     </div>
