--- a/src/app/add-item/add-station/add-station.component.html
+++ b/src/app/add-item/add-station/add-station.component.html
@@ -14,7 +14,7 @@
              ngModel #longitude="ngModel"/>
     </div>
   </div>
-  <button type="submit">
+  <button type="submit" name="addStation">
     ADD ITEM
   </button>
 </form>
