--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -77,7 +77,7 @@
         </label>
       </div>
       <button type='button' style='margin-left: 50%' class='btn btn-lg btn-outline-warning'
-              (click)="findTicket(schedule.id)" *ngIf="schedule.price!=0">
+              (click)="findTicket(schedule.id)" *ngIf="schedule.price!=0" [hidden]="!ROLE_USER">
         FIND TICKET
       </button>
       <div *ngIf="schedule.price==0">
@@ -194,7 +194,9 @@
         <label>
           {{schedule.price }}
         </label>
-        <button class='btn btn-lg btn-outline-warning' (click)="findTicketTransfer(schedule.idScheduleDeparture, schedule.idScheduleArrival)">
+        <button class='btn btn-lg btn-outline-warning'
+                (click)="findTicketTransfer(schedule.idScheduleDeparture, schedule.idScheduleArrival)"
+                [hidden]="!ROLE_USER">
           FIND TICKET
         </button>
       </div>
