--- a/src/app/add-item/add-schedule/add-schedule.component.html
+++ b/src/app/add-item/add-schedule/add-schedule.component.html
@@ -44,5 +44,5 @@
       />
     </div>
   </div>
-  <button type="submit">ADD ITEM</button>
+  <button type="submit" name="addSchedule">ADD ITEM</button>
 </form>
