--- a/src/app/schedule/schedule-by-dates/schedule-by-dates.component.html
+++ b/src/app/schedule/schedule-by-dates/schedule-by-dates.component.html
@@ -15,7 +15,7 @@
             <div class="col form-group">
               <label class="text-warning font-weight-bold">DATE ARRIVAL</label>
               <input type="date" class="form-control text-center text-dark" placeholder="ARRIVAL DATE"
-                     name="dateArrival" ngModel #dateArrival="ngModel" required>
+                     name="dateArrival" ngModel #dateArrival="ngModel">
             </div>
           </div>
           <br>
