--- a/src/app/schedule/schedule-by-dates-stations/schedule-by-dates-stations.component.html
+++ b/src/app/schedule/schedule-by-dates-stations/schedule-by-dates-stations.component.html
@@ -51,7 +51,7 @@
           </div>
           <br>
           <div class="text-center">
-            <button type="submit" class="btn btn-lg btn-outline-warning">search schedule
+            <button type="submit" class="btn btn-lg btn-outline-warning" name="findSchedule">search schedule
             </button>
           </div>
         </form>
