--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col">
       <button class="btn btn-circle btn-xl bg-warning btn-warning form-control" type="submit"
-              (click)="scheduleSubmit()">
+              (click)="scheduleSubmit()" id="scheduleSubmit">
         <img src="/src/assets/images/calendar.png">
       </button>
     </div>
